...
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/AppTheme"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/layout_calendar"
            app:layout_constraintEnd_toStartOf="@id/tv_year"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:setMonth="@{model.month}"
            tools:text="2월" />

...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_friday"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager_calendar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/tv_record"
                app:layout_constraintTop_toBottomOf="@id/tv_saturday" />

            <TextView
                android:id="@+id/tv_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewpager_calendar"
                tools:text="문항 수 50개 / 완료율 100% / 정답률 100%" />

            <Button
                android:id="@+id/btn_move_to_detail"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@{model.isDetailBtnActivate ? @color/colorPrimary : @color/boldDarkGray}"
                android:clickable="@{model.isDetailBtnActivate ? true : false}"
                android:elevation="8dp"
...
