...
    <string name="calendar_appbar_title">Test Record</string>
    <string name="calendar_detail_button">Detail</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_item_today">Today</string>
    <string name="calendar_monday">Mon</string>
    <string name="calendar_saturday">Sat</string>
    <string name="calendar_start_day">Start Day</string>
    <string name="calendar_sunday">Sun</string>
    <string name="calendar_thursday">Thur</string>
    <string name="calendar_tuesday">Tue</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_year">%d</string>
    <string name="cancel">Cancel</string>
    <string name="chart_desc_entire">[Achievement Stages]</string>
    <string name="chart_desc_today">[Challenge Stages]</string>
    <string name="close">Close</string>
    <string name="confirmation">Confirmation</string>
    <string name="dashboard_entire_btn1">Entire List</string>
...
    <string name="qst_title_registration">Registration Date</string>
    <string name="qst_title_stage">Current Stage</string>
    <string name="result_alert_sort1">Challenge Stage</string>
    <string name="result_alert_sort2">Question</string>
    <string name="result_alert_sort3">Test Result</string>
    <string name="result_appbar_title">Test Result</string>
    <string name="result_info_format">%d Questions / Completion %.1f%% / Correct %.1f%%</string>
    <string name="result_info_format_land">%d Questions\n\n\nCompletion %.1f%%\n\n\nCorrect %.1f%%</string>
    <string name="skip">Skip</string>
    <string name="sort_by">Sort By</string>
    <string name="start">Start</string>
    <string name="only_first_additional_text">Just remember two things!!\nCreate Question!\nIf you have today\'s test presented, solve them!</string>
    <string name="only_first_pager_main1">\"If memorize it difficult, it\'s hard to forget\"</string>
    <string name="only_first_pager_main2">1. Improved meta-cognition</string>
...
    <string name="only_first_pager_sub1">The best way to memorize difficulty is to take a test.\n\nClick Next to check effect of a test.</string>
    <string name="only_first_pager_sub2">Meta-cognition is what I know and what I don\'t know.\n\nThere are many times when I can\'t think of what I think I know.</string>
    <string name="only_first_pager_sub3">The way you input information into your brain is easy, so it\'s quickly forgotten.\n(Listening to a lecture, reading, etc.)\n\nTests are a way to extract information from the brain.</string>
    <string name="only_first_pager_sub4">This app helps you repeat the test, giving you time to forget things you memorized.\n\nRepeating the test at adequate test cycle is very helpful for long-term memory.</string>
    <string name="status_msg_complete">Completion</string>
    <string name="status_msg_no_start">No Start</string>
    <string name="status_msg_no_test">No Test</string>
    <string name="status_msg_ongoing">Ongoing</string>
    <string name="test_appbar_title">Today\'s Test</string>
    <string name="test_correct">Correct</string>
    <string name="test_dormant_appbar_title">Dormant Question</string>
    <string name="test_dormant_initialize_msg">All dormant questions below stage 1 have been initialized.</string>
    <string name="test_dormant_snackbar_msg">Please test to clear dormant.\nCorrect keeps stage, and wrong drops stage.</string>
...
