<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="dayInfo"
            type="kr.yangbob.memorization.data.DayInfo" />

        <variable
            name="isSunday"
            type="Boolean" />

        <variable
            name="isClicked"
            type="Boolean" />
        <!-- true : sunday, false : saturday , null : remain -->

        <variable
            name="holder"
            type="kr.yangbob.memorization.adapter.CalendarViewHolder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{() -> holder.click(dayInfo.infoCalendar)}"
        android:tag="@{isClicked}"
        android:background="@{isClicked ? @drawable/border : null}">

        <ImageView
            android:id="@+id/iv_day_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:layout_margin="3dp"
            android:visibility="gone"
            app:setDayBackground="@{dayInfo.infoCalendar}"
            app:srcCompat="@drawable/ic_check_complete_calendar" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeTextType="uniform"
            app:dayInfo="@{dayInfo}"
            app:isSunday="@{isSunday}"
            tools:text="11"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

