...
        <variable
            name="holder"
            type="kr.yangbob.memorization.adapter.CalendarViewHolder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_days"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_day1"
            layout="@layout/activity_calendar_layout_day"
...
